# HelloCV

./: .gitignore  README.md  commitREADME.sh  语雀链接汇总.md
CryptoTool/: CMakeLists.txt  clean.sh
CryptoTool/include/: Crypto.h  FileHandler.h  Menu.h
CryptoTool/src/: Crypto.cpp  FileHandler.cpp  Menu.cpp  main.cpp
Week 2/CryptoTool/: CMakeLists.txt  README.md
Week 2/CryptoTool/include/: FileHandler.h
Week2/CryptoTool/: build.sh  clean.sh
Week2/CryptoTool/include/: Menu.h
Week2/CryptoTool/src/: Crypto.cpp
Week3/: README.md
Week3/opencvtest/: CMakeLists.txt  build.sh
Week3/opencvtest/include/: mytools.h
Week3/opencvtest/src/: main.cpp  mytools.cpp
Week3/opencvtest/video/: result.avi
